# GstreamerMeidaFramework

./: CMakeLists.txt  README.md
docs/: STAGE1.md  STAGE2.md
examples/stage1/: 01_elements.c  02_pipeline.c  03_bus.c  04_dynamic_pad.c  05_caps.c  06_request_pad.c  CMakeLists.txt  stage1_common.c  stage1_common.h
include/: error.h  learning_stage.h  logger.h  media_controller.h  media_types.h  player.h  recorder.h  transcoder.h
scripts/: build.sh  install.sh
src/: main.c
src/core/: media_controller.c  media_types.c
src/modules/: player.c  recorder.c  transcoder.c
src/stage2/: player.c  recorder.c  transcoder.c
src/utils/: error.c  logger.c
tests/: test_player.c  test_recorder.c
tests/stage2/: CMakeLists.txt  test_stage2_core.c
